Ajout de test testSerializeToJson, correction apportés a testDeserializefromHttpClientRequest. Ajout d'une surchage de constructeur a la classe Room